--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+      <!-- Bootstrap Icons -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
    </head>
 
    <style>
@@ -42,7 +46,7 @@
                      <p class="text-center" style="margin: 3.5rem 0">
                         <a role="button" class="btn btn-primary" href="" target="_self">
                            <i class="bi bi-bag-check"></i>
-                           Borrow This
+                           &nbsp;&nbsp;Borrow This
                         </a>
                      </p>
                   </div>
@@ -67,7 +71,7 @@
                      <p class="text-center" style="margin:3.5rem 0">
                         <a role="button" class="btn btn-primary" href="" target="_self">
                            <i class="bi bi-bag-check"></i>
-                           Borrow This
+                           &nbsp;&nbsp;Borrow This
                         </a>
                      </p>
                   </div>
@@ -92,7 +96,7 @@
                      <p class="text-center" style="margin: 3.5rem 0">
                         <a role="button" class="btn btn-primary" href="" target="_self">
                            <i class="bi bi-bag-check"></i>
-                           Borrow This
+                           &nbsp;&nbsp;Borrow This
                         </a>
                      </p>
                   </div>
@@ -109,7 +113,7 @@
          </div>
          <div class='modal fade' tabindex='-1' role='dialog' id='modal-20292843'>
             <div class='modal-dialog' role='document'>
-               <div class='modal-content'>
+               <div class='modal-content' style="padding: 2rem;">
                   <div class='modal-header'><button type='button' class='close' data-dismiss='modal'
                         aria-label='Close'><span aria-hidden='true'>×</span></button>
                      <h4 class='modal-title'>Borrowing Policies</h4>
